Scale gizmos cause complete freezes in Blender 2.83 on Intel graphics #77455
Closed
opened 2020-06-05 17:16:41 +02:00 by Real Name
·
24 comments
No Branch/Tag Specified
main
blender-v3.6-release
universal-scene-description
temp-sculpt-dyntopo
blender-v3.3-release
asset-browser-frontend-split
brush-assets-project
asset-shelf
anim/armature-drawing-refactor-3
temp-sculpt-dyntopo-hive-alloc
tmp-usd-python-mtl
tmp-usd-3.6
blender-v3.5-release
blender-projects-basics
blender-v2.93-release
temp-sculpt-attr-api
realtime-clock
sculpt-dev
gpencil-next
bevelv2
microfacet_hair
xr-dev
principled-v2
v3.6.3
v3.3.11
v3.6.2
v3.3.10
v3.6.1
v3.3.9
v3.6.0
v3.3.8
v3.3.7
v2.93.18
v3.5.1
v3.3.6
v2.93.17
v3.5.0
v2.93.16
v3.3.5
v3.3.4
v2.93.15
v2.93.14
v3.3.3
v2.93.13
v2.93.12
v3.4.1
v3.3.2
v3.4.0
v3.3.1
v2.93.11
v3.3.0
v3.2.2
v2.93.10
v3.2.1
v3.2.0
v2.83.20
v2.93.9
v3.1.2
v3.1.1
v3.1.0
v2.83.19
v2.93.8
v3.0.1
v2.93.7
v3.0.0
v2.93.6
v2.93.5
v2.83.18
v2.93.4
v2.93.3
v2.83.17
v2.93.2
v2.93.1
v2.83.16
v2.93.0
v2.83.15
v2.83.14
v2.83.13
v2.92.0
v2.83.12
v2.91.2
v2.83.10
v2.91.0
v2.83.9
v2.83.8
v2.83.7
v2.90.1
v2.83.6.1
v2.83.6
v2.90.0
v2.83.5
v2.83.4
v2.83.3
v2.83.2
v2.83.1
v2.83
v2.82a
v2.82
v2.81a
v2.81
v2.80
v2.80-rc3
v2.80-rc2
v2.80-rc1
v2.79b
v2.79a
v2.79
v2.79-rc2
v2.79-rc1
v2.78c
v2.78b
v2.78a
v2.78
v2.78-rc2
v2.78-rc1
v2.77a
v2.77
v2.77-rc2
v2.77-rc1
v2.76b
v2.76a
v2.76
v2.76-rc3
v2.76-rc2
v2.76-rc1
v2.75a
v2.75
v2.75-rc2
v2.75-rc1
v2.74
v2.74-rc4
v2.74-rc3
v2.74-rc2
v2.74-rc1
v2.73a
v2.73
v2.73-rc1
v2.72b
2.72b
v2.72a
v2.72
v2.72-rc1
v2.71
v2.71-rc2
v2.71-rc1
v2.70a
v2.70
v2.70-rc2
v2.70-rc
v2.69
v2.68a
v2.68
v2.67b
v2.67a
v2.67
v2.66a
v2.66
v2.65a
v2.65
v2.64a
v2.64
v2.63a
v2.63
v2.61
v2.60a
v2.60
v2.59
v2.58a
v2.58
v2.57b
v2.57a
v2.57
v2.56a
v2.56
v2.55
v2.54
v2.53
v2.52
v2.51
v2.50
v2.49b
v2.49a
v2.49
v2.48a
v2.48
v2.47
v2.46
v2.45
v2.44
v2.43
v2.42a
v2.42
v2.41
v2.40
v2.37a
v2.37
v2.36
v2.35a
v2.35
v2.34
v2.33a
v2.33
v2.32
v2.31a
v2.31
v2.30
v2.28c
v2.28a
v2.28
v2.27
v2.26
v2.25
Labels
Clear labels
This issue affects/is about backward or forward compatibility
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Apply labels
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
This issue affects/is about backward or forward compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Issues relating to security: https://wiki.blender.org/wiki/Process/Vulnerability_Reports
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest: Wayland
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
Milestone
Set milestone
Clear milestone
No items
No Milestone
Projects
Set Project
Clear projects
No project
Assignees
Assign users
Clear assignees
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#77455
Reference in New Issue
There is no content yet.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may exist for a short time before cleaning up, in most cases it CANNOT be undone. Continue?
System Information
Operating system: Linux-5.6.15-arch1-1-x86_64-with-glibc2.29 64 Bits
Graphics card: Mesa Intel(R) UHD Graphics 620 (KBL GT2) Intel 4.6 (Core Profile) Mesa 20.0.7
Blender Version
Broken: version: 2.83.0, branch: makepkg (modified), commit date: 2020-06-03 14:38, hash:
211b6c29f7
Worked: 2.82a
Short description of error
Blender freezes completely when the scale gizmo is used.
The exact number of operations that can be performed before crashing seems to vary between 1 and about 10.
When frozen, the UI is unresponsive, one CPU core is pinned at 100% usage, and the system becomes quite sluggish until Blender is force-killed.
Memory usage is normal (<5% usage).
The issue doesn't seem to happen on my Nvidia card (Geforce MX150) when started with prime-run.
Exact steps for others to reproduce the error
Add a cube
Select the cube
Click on the resize gizmo
Resize on the X,Y, and Z Asis.
Result: OK. Still Working
Click on the rotation gizmo
Then click on the resize Gizmo
Result: Freeze happen, forced to restart Blender
Add a cube
Select the cube
Click on the resize Gizmo
Result: Freeze again
By deleting the .blend files in the*/tmp* folder, the user could again do more resizes, the freeze can also be triggerred with other types of actions.
Added subscriber: @tstsrt
#78657 was marked as duplicate of this issue
Added subscriber: @mano-wii
Changed status from 'Needs Triage' to: 'Needs User Info'
The steps are not very clear.
Do we have to use the same gizmo a number of times or can it be different gizmos?
Any single gizmo or multiple gizmos can be used.
A recent problem with the undo system has been fixed.
For many it could look like random crashes.
Can you try the latest daily build and confirm that the problem still exists? https://builder.blender.org/download/
Just checked both the 2.83 and 2.90 builds. The problem still persists in both.
Changed status from 'Needs User Info' to: 'Needs Triage'
Added subscriber: @christian-clavet
Hi, Have to report the same problem with someone from the french community using a Intel NUC (Intel GPU), and using Ubuntu 20.04 as OS. The issue happen more often when using the gizmo to rescale an object. The UI freeze and he can only force quit Blender.
Can this be related on "picking" on Intel? (like the pick function would go in an infinite loop because of the way the driver respond to the pick requests)
Like this change?: https:*developer.blender.org/rB3685347b4172
It happen while dragging, then freeze, then have to force Quit Blender. As mentionned, this will not reproduce every time. Need to do it a couple of times to have it reproduce..
EDIT: The user tried the last build of 2.9Alpha build (june 22) and the problem is reproductible using the scale gizmo. The issue is not present on Blender 2.82a.
Edit2(June 25) Asked the user to retest using newly released Blender 2.83.1. Waiting for the feedback.
Update: In Blender 2.83.1, the problem now only occurs with the scale gizmo and not move or rotate.
Update: (june 29)
Got new result from my french community user testing the problem with 2.83.1
User tried with 2.83.1. It still freeze.
Hardware: This user run an Intel NUC, running with and i7 processor on Ubuntu, and using the integrated GPU.
Here are the steps that were used to test:
Add a cube
Select the cube
Click on the resize gizmo
Resize on the X,Y, and Z Asis.
Result: OK. Still Working
Click on the rotation gizmo
Then click on the resize Gizmo
Result: Freeze happen, forced to restart Blender
Add a cube
Select the cube
Click on the resize Gizmo
Result: Freeze again
By deleting the .blend files in the*/tmp* folder, the user could again do more resizes, the freeze can also be triggerred with other types of actions.
Object gizmos cause complete freezes in Blender 2.83 on Intel graphicsto Scale gizmos cause complete freezes in Blender 2.83 on Intel graphicsAdded subscriber: @Jeroen-Bakker
@Jeroen-Bakker, do you have a setup to test the
Intel(R) UHD Graphics 620
on Linux?I am able to reproduce this one. Will have a look
The driver freezes in
glGetQueryObjectuiv
(gpu_select_sample_query.c
) wheni = 3
adding any additional delay here makes it very hard to reproduce.Probably introduced by
d712f1f83a
But due to the randomness of the issue, you should take it with a grain of salt.When it fails it seems to always fail when getting the result of
GIZMO_GT_arrow_3d
.This issue was referenced by
0f95cc8293
This issue was referenced by
202e7ccaae
Added subscribers: @giovannio.garoto, @Memento
Changed status from 'Needs Triage' to: 'Resolved'
Thanks! Jeroen! I asked the french community user to try again with the fix.
Update: I can confirm the issue is resolved in the July 14th daily build of Blender 2.90. Thanks for the fix!